--- a/mcp-server/what-is-mcp.mdx
+++ b/mcp-server/what-is-mcp.mdx
@@ -5,6 +5,10 @@ description: "Introduction to the Model Context Protocol and how it works with T
 
 The **Model Context Protocol (MCP)** is an open standard that lets AI agents like Claude and Cursor access external tools and data sources. Trackyard's MCP server gives AI agents direct access to the music catalog.
 
+<Info>
+  **Pricing Note:** MCP access may have different pricing than direct API access. Check [app.trackyard.com/api-keys](https://app.trackyard.com/api-keys) for current pricing details.
+</Info>
+
 ---
 
 ## How It Works
