--- a/api-reference/examples.mdx
+++ b/api-reference/examples.mdx
@@ -7,7 +7,7 @@ Production-ready code examples for integrating Trackyard into your applications.
 
 ---
 
-## Python SDK (Unofficial)
+## Python
 
 Install via pip:
 
