--- a/api-reference/parameters.mdx
+++ b/api-reference/parameters.mdx
@@ -41,28 +41,90 @@ All filters are optional and can be combined.
 <ParamField path="filters.genres" type="array">
   Array of genre strings. Tracks must match at least one.
   
-  **Common genres:**
-  - Electronic: `"House"`, `"Techno"`, `"Ambient"`, `"Lo-Fi"`, `"Synthwave"`
-  - Hip Hop: `"Boom Bap"`, `"Trap"`, `"Lo-Fi Hip Hop"`, `"Instrumental"`
-  - Cinematic: `"Orchestral"`, `"Hybrid"`, `"Trailer Music"`, `"Underscore"`
-  - Corporate: `"Uplifting"`, `"Minimal"`, `"Professional"`
-  - Acoustic: `"Folk"`, `"Singer-Songwriter"`, `"Indie"`, `"Americana"`
-  - Classical: `"String Quartet"`, `"Piano"`, `"Chamber"`, `"Baroque"`
+  **Available genres include:**
+  - Acoustic
+  - Ambient
+  - Blues
+  - Cinematic
+  - Classical
+  - Country
+  - Electronic
+  - Folk
+  - Funk
+  - Hip Hop
+  - House
+  - Indie
+  - Jazz
+  - Latin
+  - Lo-Fi
+  - Metal
+  - Pop
+  - R&B
+  - Reggae
+  - Rock
+  - Soul
+  - Techno
+  - World
   
   **Example:** `["Electronic", "Pop"]`
+  
+  <Info>
+    For the complete, current list of genres, see [app.trackyard.com/browse/genres](https://app.trackyard.com/browse/genres)
+  </Info>
 </ParamField>
 
 <ParamField path="filters.moods" type="array">
   Array of mood strings. Tracks must match at least one.
   
-  **Common moods:**
-  - Energy: `"Upbeat"`, `"Energetic"`, `"Motivational"`, `"Powerful"`
-  - Calm: `"Chill"`, `"Relaxed"`, `"Peaceful"`, `"Ambient"`
-  - Emotional: `"Warm"`, `"Nostalgic"`, `"Melancholic"`, `"Hopeful"`
-  - Professional: `"Corporate"`, `"Clean"`, `"Modern"`, `"Minimal"`
-  - Dramatic: `"Tense"`, `"Suspenseful"`, `"Epic"`, `"Cinematic"`
+  **Available moods:**
+  - Ambient
+  - Angry
+  - Calm
+  - Chill
+  - Cinematic
+  - Confident
+  - Contemplative
+  - Dark
+  - Dramatic
+  - Dreamy
+  - Eccentric
+  - Elegant
+  - Energetic
+  - Epic
+  - Euphoric
+  - Floating
+  - Frantic
+  - Fun
+  - Glamorous
+  - Groovy
+  - Happy
+  - Heavy
+  - Hopeful
+  - Hypnotic
+  - Inspiring
+  - Intimate
+  - Laid Back
+  - Melancholic
+  - Mysterious
+  - Nostalgia
+  - Nostalgic
+  - Peaceful
+  - Quirky
+  - Romantic
+  - Sad
+  - Scary
+  - Sensual
+  - Sentimental
+  - Sneaking
+  - Suspense
+  - Warm
+  - Weird
   
-  **Example:** `["Upbeat", "Motivational"]`
+  **Example:** `["Upbeat", "Energetic"]`
+  
+  <Info>
+    For the complete, current list of moods, see [app.trackyard.com/browse/moods](https://app.trackyard.com/browse/moods)
+  </Info>
 </ParamField>
 
 <ParamField path="filters.has_vocals" type="boolean">
