--- a/getting-started/api-quickstart.mdx
+++ b/getting-started/api-quickstart.mdx
@@ -10,8 +10,7 @@ This guide walks you through the complete workflow: from account creation to dow
 ## Prerequisites
 
 - A Trackyard account ([sign up here](https://app.trackyard.com))
-- Basic familiarity with REST APIs and command-line tools
-- `curl` installed (or any HTTP client)
+- Basic familiarity with REST APIs
 
 ---
 
