--- a/use-cases/social-media-content-farms.mdx
+++ b/use-cases/social-media-content-farms.mdx
@@ -123,6 +123,43 @@ print("✓ 200 videos scored in ~10 minutes")
 
 ---
 
+## The No-Code Alternative: OpenClaw
+
+Don't want to write Python? Use the OpenClaw skill to automate the entire workflow conversationally.
+
+### Example Workflow
+
+Tell your OpenClaw bot:
+
+```
+"Every Monday and Wednesday at 9am:
+1. Generate 5 video ideas about travel destinations
+2. Find stock images at Pexels for each destination
+3. Stitch images together into 15-second videos
+4. Add a script with subtitles
+5. Search Trackyard for upbeat travel music
+6. Add the music to each video (15-second clips, smart-trimmed)
+7. Save the final videos to my Google Drive"
+```
+
+**What OpenClaw Does:**
+- Generates ideas using AI
+- Finds stock images via Pexels skill
+- Creates videos (stitching images together)
+- Adds scripts and subtitles
+- **Calls Trackyard skill:** Searches for "upbeat travel music"
+- **Downloads clips:** Gets 15-second smart-trimmed clips
+- Merges audio + video
+- Uploads to Google Drive
+
+**Result:** 5 fully produced videos, automatically created twice a week, with zero code.
+
+<Info>
+  See the [OpenClaw Example Workflows](/openclaw/example-workflows) page for more automation ideas.
+</Info>
+
+---
+
 ## Key Parameters
 
 <ParamField path="duration_seconds" type="number" required>
